# Stacio

./: .gitattributes  .gitignore  LICENSE  Package.resolved  Package.swift  README.md  package-lock.json  package.json
StacioCLI/: main.swift
StacioCore/: Cargo.toml
StacioCore/migrations/: 0001_init.sql  0002_agent_actions.sql  0003_agent_tasks.sql  0004_ai_conversation_history.sql  0005_terminal_macros.sql
StacioCore/src/: lib.rs
StacioCore/src/domain/: agent.rs  credential.rs  device_metrics.rs  diagnostics.rs  error.rs  files.rs  ftp.rs  graphics.rs  macro_recording.rs  mod.rs  multiexec.rs  scp.rs  serial.rs  session.rs  ssh.rs  telnet.rs  terminal.rs  tunnel.rs
StacioCore/src/infrastructure/: agent_audit_repository.rs  agent_task_repository.rs  ai_conversation_history_repository.rs  audit_repository.rs  credential_repository.rs  db.rs  import_repository.rs  known_host_repository.rs  mod.rs  serial.rs  session_repository.rs  telnet.rs  terminal_macro_repository.rs  transfer_repository.rs  tunnel_repository.rs
StacioCore/src/infrastructure/files/: ftp_control.rs  libssh2_exec_listing.rs  mod.rs
StacioCore/src/services/: agent_service.rs  device_metrics_service.rs  diagnostics_service.rs  graphics_service.rs  import_service.rs  live_shell_service.rs  macro_service.rs  mod.rs  multiexec_service.rs  os_probe_service.rs  scp_service.rs  ssh_service.rs  telnet_service.rs  terminal_service.rs  tunnel_service.rs
StacioCore/src/telemetry/: redaction.rs
StacioCore/tests/: ai_conversation_history_repository_tests.rs  terminal_macro_repository_tests.rs
(+510 files in other folders)
