[package]
name = "stacio_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "stacio_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
libc = "0.2"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
thiserror = "2"
uniffi = { version = "0.29", features = ["cli"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
